welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:6: error: type mismatch;
 found   : Unit
 required: Boolean
		if (b>=30 && b<=40){return true}
                ^